YTG-#9 [로그인][페이지 이동] 로그인 to 회원가입 기능 개발
- 로그인에서 회원가입 페이지 이동 개발
- 로그인 데이타바인딩 진행

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -24,7 +24,17 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.az.login.LoginFragment">
+        android:name="com.az.login.view.LoginFragment">
+
+        <action
+            android:id="@+id/action_loginFragment_to_signupFragment"
+            app:destination="@id/signupFragment"/>
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/signupFragment"
+        android:name="com.az.signup.SignupFragment">
 
     </fragment>
 </navigation>
