--- a/features/signup/src/main/res/layout/fragment_signup.xml
+++ b/features/signup/src/main/res/layout/fragment_signup.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+
+        <variable
+            name="vm"
+            type="com.az.signup.SignupViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -22,6 +29,7 @@
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorDarkLightGrey"
             android:textSize="15sp"
+            android:text="@={vm.id}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,6 +70,7 @@
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorDarkLightGrey"
             android:textSize="15sp"
+            android:text="@={vm.password}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_id_error" />
@@ -78,6 +87,7 @@
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorDarkLightGrey"
             android:textSize="15sp"
+            android:text="@={vm.passwordCheck}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edit_text_password" />
@@ -107,6 +117,7 @@
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorDarkLightGrey"
             android:textSize="15sp"
+            android:text="@={vm.nickname}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_password_check_error" />
