--- a/features/details/src/main/res/layout/layout_contents_detail.xml
+++ b/features/details/src/main/res/layout/layout_contents_detail.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="detail"
+            type="com.az.detail.TempHumorDetailData" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,6 +23,7 @@
             android:layout_marginEnd="9dp"
             android:background="@drawable/btn_heart"
             android:button="@null"
+            android:checked="@{detail.isHeart}"
             app:layout_constraintBottom_toBottomOf="@id/btn_bookmark"
             app:layout_constraintEnd_toStartOf="@id/btn_bookmark"
             app:layout_constraintTop_toTopOf="@id/btn_bookmark" />
@@ -27,6 +36,7 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/btn_bookmark"
             android:button="@null"
+            android:checked="@{detail.isBookmark}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,14 +47,15 @@
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="33dp"
             android:gravity="center"
-            android:text="소나무가 삐지면?\n\n칫솔"
+            android:text="@{detail.content}"
             android:textColor="@color/colorBlack"
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/divider_details"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_heart" />
+            app:layout_constraintTop_toBottomOf="@id/btn_heart"
+            tools:text="소나무가 삐지면?\n\n칫솔" />
 
         <View
             android:id="@+id/divider_details"
@@ -74,13 +85,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:text="48개"
+            android:text="@{@string/count(detail.heart)}"
             android:textColor="@color/colorBlack"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/ic_heart"
             app:layout_constraintStart_toEndOf="@id/ic_heart"
-            app:layout_constraintTop_toTopOf="@id/ic_heart" />
+            app:layout_constraintTop_toTopOf="@id/ic_heart"
+            tools:text="48개" />
 
 
         <ImageView
@@ -98,13 +110,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:text="10개"
+            android:text="@{@string/count(detail.comment)}"
             android:textColor="@color/colorBlack"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/ic_heart"
             app:layout_constraintStart_toEndOf="@id/ic_comment"
-            app:layout_constraintTop_toTopOf="@id/ic_heart" />
+            app:layout_constraintTop_toTopOf="@id/ic_heart"
+            tools:text="10개" />
 
         <TextView
             android:id="@+id/user"
@@ -114,13 +127,14 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="20dp"
             android:gravity="end"
-            android:text="신입 가나다님"
+            android:text="@{detail.user}"
             android:textColor="@color/colorBlack"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/count_comment"
-            app:layout_constraintTop_toBottomOf="@id/divider_details" />
+            app:layout_constraintTop_toBottomOf="@id/divider_details"
+            tools:text="신입 가나다님" />
 
         <TextView
             android:id="@+id/time"
@@ -128,12 +142,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="16dp"
-            android:text="한시간 전"
+            android:text="@{detail.time}"
             android:textColor="@color/colorBlack"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/user"
-            app:layout_constraintTop_toBottomOf="@id/user" />
+            app:layout_constraintTop_toBottomOf="@id/user"
+            tools:text="한시간 전" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
