Feature #8/main 메인 페이지 레이아웃 완성 (#13)
* YTG-#8 [메인][모듈] main Dynamic Feature Module 추가

* YTG-#8 [메인][모듈] main 모듈 build.gradle 을 build.gradle.kts 로 변경

* YTG-#8 [메인][모듈] main 모듈 features 디렉토리로 이동

* YTG-#8 [메인][모듈] buildSrc BuildModules.Features 에 main 모듈 추가

* YTG-#8 [메인][모듈] settings.gradle.kts dynamicFeatures 구성에 Main 모듈 추가

* YTG-#8 [메인][모듈] :app 수준의 build.gradle.kts dynamicFeatures 구성에 main 모듈 추가

* YTG-#8 [메인][모듈] MainFragment 추가

* YTG-#8 [메인][모듈] fragment_main.xml 에 dataBinding 추가

* YTG-#8 [메인][모듈] MainViewModel 추가

* YTG-#8 [메인][모듈] MainViewModelModule 추가

* YTG-#8 [메인][모듈] MainFragment 에서 FragmentMainBinding 으로 view inflate 하는 코드 추가

* YTG-#8 [메인][레이아웃] fragment_main.xml 배경, 텍스트 추가

* YTG-#8 [메인][레이아웃] 등급 textview 에 bold 속성 추가

* YTG-#8 [메인][레이아웃] 메인화면 프로필 imageView 추가

* YTG-#8 [메인][레이아웃] 메인화면 등급업 progress bar 적용

* YTG-#8 [메인][레이아웃] 프로그래스 바 레이아웃 추가

* YTG-#8 [메인][레이아웃] 메인화면 유머카드리스트 백그라운드 리소스 추가

* YTG-#8 [메인][레이아웃] 메인화면 유머 카드 배경 추가, R값 50으로 수정

* YTG-#8 [메인][레이아웃] main_nav_graph.xml 에 mainFragment 추가 및 startDestination 으로 지정

* YTG-#8 [메인][네비게이션] DynamicToolbar onDestinationChanged 에서 mainFragment 로 이동하는 기능 추가

* YTG-#8 [메인][레이아웃] MainActivity 에서 navController 초기화시 mainFragment 로 이동하도록 수정

* YTG-#8 [메인][레이아웃] Build 했을때 Ui 확인하기 위해 tools:text 를 android:text 로 잠시 바꿨습니다

* YTG-#8 [메인][레이아웃] rounded_background_for_humor_card.xml -> 메인화면에서 유머카드 보여주는 회색 백그라운드 하단 Radius 0dp 로 수정

* YTG-#8 [메인][레이아웃] Toolbar 와 등급텍스트 관련 View 간격 조정

* YTG-#8 [메인][레이아웃] StickyScrollView.kt 추가

* YTG-#8 [메인][colors] colorMiddleGrey 추가

* YTG-#8 [메인][레이아웃] 유머 카드 리사이클러뷰 아이템 추가

* YTG-#8 [메인][레이아웃] fragment_main.xml 에 유머 카드 리사이클러뷰 추가

* YTG-#8 [메인][레이아웃] fragment_main.xml 에 유머 카드에 임시로 title 추가해둠

* YTG-#8 [메인][레이아웃] 오늘의 유머, 명에의 전당 프래그먼트 추가

유머 카드 리사이클러뷰를 보여줄 Fragment 들임

* YTG-#8 [메인][레이아웃] fragment_main.xml 유머카드 리스트를 FragmentContainerView 로 보여주도록 수정

* YTG-#8 [메인][레이아웃] 명예의 전당 유머카드 아이템 background 추가

* YTG-#8 [메인][레이아웃] 

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -2,13 +2,14 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/mainFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.az.home.ui.views.HomeFragment">
+        android:id="@+id/mainFragment"
+        android:name="com.az.main.MainFragment">
 
     </fragment>
+
 
     <fragment
         android:id="@+id/humorsFragment"
