YTG-#16 [글작성페이지][모듈] 글작성페이지 글자수에 따라 글씨 크기 줄어드는 기능 추가

--- a/features/create/src/main/res/layout/fragment_create.xml
+++ b/features/create/src/main/res/layout/fragment_create.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.az.create.CreateViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,6 +20,7 @@
         tools:context=".CreateFragment">
 
         <EditText
+            android:id="@+id/humor_input"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="30dp"
@@ -31,6 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            bind:flexibleSizeText="@={vm.humorText}"
             tools:text="소나무가 삐지면?\n\n칫솔" />
 
         <androidx.constraintlayout.widget.Guideline
