YTG-#25 [메인][모듈] 메인 페이지 디자인 변경된것들 수정

--- a/features/main/src/main/res/drawable/bg_humor_card_title_fame.xml
+++ b/features/main/src/main/res/drawable/bg_humor_card_title_fame.xml
@@ -7,5 +7,5 @@
         android:bottomRightRadius="0dp"
         android:topLeftRadius="25dp"
         android:topRightRadius="25dp" />
-    <solid android:color="@color/colorLightLightGrey" />
+    <solid android:color="@color/colorDarkBlack" />
 </shape>
