--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,15 +5,18 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorBlack">#000000</color>
+    <color name="colorDarkBlack">#161616</color>
     <color name="colorDarkGrey">#222222</color>
     <color name="colorMiddleGrey">#333333</color>
     <color name="colorGrey">#404040</color>
     <color name="colorGreyGrey">#5C5C5C</color>
     <color name="colorGreyGreyGrey">#6C6C6C</color>
     <color name="colorLightGrey">#737373</color>
+    <color name="colorLightLightGrey">#DDDDDD</color>
     <color name="colorWhite">#FFFFFF</color>
 
     <color name="colorPurple">#B029DF</color>
+    <color name="colorDarkLightPurple">#DF84FF</color>
     <color name="colorLightPurple">#E69FFF</color>
     <color name="colorGreen">#1EC57E</color>
     <color name="colorYellow">#FFE111</color>
