--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -29,7 +29,7 @@
                 android:gravity="center"
                 android:text="@{vm.userGrade}"
                 android:textColor="@color/colorWhite"
-                android:textSize="35sp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -42,21 +42,31 @@
                 android:gravity="center"
                 android:text="@{vm.userGradeText}"
                 android:textColor="@color/colorWhite"
-                android:textSize="35sp"
+                android:textSize="30sp"
                 app:layout_constraintStart_toStartOf="@id/user_grade"
                 app:layout_constraintTop_toBottomOf="@id/user_grade"
                 tools:text="분발하자^^" />
 
+            <ImageView
+                android:layout_width="56dp"
+                android:layout_height="80dp"
+                android:src="@drawable/ic_sinip_sticker"
+                app:layout_constraintBottom_toBottomOf="@id/user_grade_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/user_grade" />
+
             <TextView
                 android:id="@+id/post_number_text"
-                android:layout_width="42dp"
-                android:layout_height="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="33dp"
-                android:background="@drawable/bg_humor_grade_progress_button"
+                android:background="@drawable/bg_humor_grade_button_main"
                 android:gravity="center"
+                android:paddingHorizontal="9dp"
+                android:paddingVertical="3dp"
                 android:text="게시글"
-                android:textColor="@color/colorPurple"
-                android:textSize="13sp"
+                android:textColor="@color/colorLightGrey"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/user_grade"
                 app:layout_constraintTop_toBottomOf="@id/user_grade_text" />
@@ -65,10 +75,10 @@
                 android:id="@+id/post_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="2dp"
                 android:text="@{@string/count(vm.postCount)}"
                 android:textColor="@color/colorWhite"
-                android:textSize="17sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/post_number_text"
                 app:layout_constraintStart_toEndOf="@id/post_number_text"
@@ -77,14 +87,16 @@
 
             <TextView
                 android:id="@+id/comment_number_text"
-                android:layout_width="37dp"
-                android:layout_height="19dp"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/bg_humor_grade_progress_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:background="@drawable/bg_humor_grade_button_main"
                 android:gravity="center"
+                android:paddingHorizontal="9dp"
+                android:paddingVertical="3dp"
                 android:text="댓글"
-                android:textColor="@color/colorPurple"
-                android:textSize="13sp"
+                android:textColor="@color/colorLightGrey"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/post_number_text"
                 app:layout_constraintStart_toEndOf="@id/post_number"
@@ -94,10 +106,10 @@
                 android:id="@+id/comment_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="2dp"
                 android:text="@{@string/count(vm.commentCount)}"
                 android:textColor="@color/colorWhite"
-                android:textSize="17sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/comment_number_text"
                 app:layout_constraintStart_toEndOf="@id/comment_number_text"
@@ -108,10 +120,10 @@
                 android:id="@+id/humor_count_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="11dp"
+                android:layout_marginStart="12dp"
                 android:text="@string/humor_count_text"
-                android:textColor="@color/colorWhite"
-                android:textSize="14sp"
+                android:textColor="@color/colorLightGrey"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/comment_number"
                 app:layout_constraintStart_toEndOf="@id/comment_number"
                 app:layout_constraintTop_toTopOf="@id/comment_number" />
