YTG-#25 [메인][기능] 메인 모듈 패키지 디렉토리 리팩토링

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.az.main.MainFragment">
+        android:name="com.az.main.view.MainFragment">
 
     </fragment>
 
