--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="vm"
-            type="com.az.main.MainViewModel" />
+            type="com.az.main.viewmodel.MainViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
